--- a/test2.html
+++ b/test2.html
@@ -20,15 +20,15 @@ padding:10px;
 <table>
 <thead>
 <tr>
-<th rowspan="1"></th>
-<th>8:30-9:30</th>
-<th>9:30-10:30</th>
-<th>10:30-11:30</th>
-<th>11:30-12:30</th>
-<th>12:30-2:00</th>
-<th>2:00-3:00</th>
-<th>3:00-4:00</th>
-<th colspan="2">3:00-4:00</th>
+<th></th>
+<td>8:30-9:30</td>
+<td>9:30-10:30</td>
+<td>10:30-11:30</td>
+<td>11:30-12:30</td>
+<td>12:30-2:00</td>
+<td>2:00-3:00</td>
+<td>3:00-4:00</td>
+<td colspan="2">4:00-5:00</td>
 </tr>
 <tr>
 <th>MONDAY</th>
@@ -36,10 +36,10 @@ padding:10px;
 <th style="color:blue"><b>SUB1</b></th>
 <th style="color:orange"><b>SUB2</b></th>
 <th style="color:purple"><b>SUB3</b></th>
-<th rowspan="6">L<br>u<br>n<br>c<br>h</th>
+<td rowspan="6">L<br>U<br>N<br>C<br>H</td>
 <th style="color:green"><b>SUB4</b></th>
 <th style="color:red"><b>SUB5</b></th>
-<th colspan="2"><b>SUB1</b></th>
+<th colspan="2"><b>COUNCELLING CLASS</b></th>
 </tr>
 <tr>
 <th>TUESDAY</th>
@@ -49,7 +49,7 @@ padding:10px;
 <th>---</th>
 <th style="color:orange"><b>SUB2</b></th>
 <th style="color:orange"><b>SUB2</b></th>
-<th colspan="2">LIBRARY</th>
+<td colspan="2">LIBRARY</td>
 </tr>
 <th>WEDNESDAY</th>
 <th>---</th>
@@ -67,7 +67,7 @@ padding:10px;
 <th>---</th>
 <th style="color:orange"><b>SUB2</b></th>
 <th style="color:orange"><b>SUB2</b></th>
-<th colspan="2">LIBRARY</th>
+<td colspan="2">LIBRARY</td>
 </tr>
 <th>FRIDAY</th>
 <th style="color:blue"><b>SUB1</b></th>
@@ -76,14 +76,14 @@ padding:10px;
 <th>---</th>
 <th style="color:green"><b>SUB4</b></th>
 <th style="color:red"><b>SUB5</b></th>
-<th colspan="2">LIBRARY</th>
+<td colspan="2">LIBRARY</td>
 </tr>
 <th>SATURDAY</th>
 <th style="color:blue"><b>SUB1</b></th>
 <th colspan="3"><b>SEMINAR</b></th>
 <th style="color:green"><b>SUB4</b></th>
 <th style="color:red"><b>SUB5</b></th>
-<th colspan="2">LIBRARY</th>
+<td colspan="2">LIBRARY</td>
 </tr>
 
 
